Change to non blocking calls